mock-exam-2/multi.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: multi-pod
  name: multi-pod
spec:
  containers:
  - image: nginx
    name: jupiter
    resources: {}

  - image: busybox
    name: europa
    command: ["sleep","4800"]
    resources: {}

  dnsPolicy: ClusterFirst
  restartPolicy: Always
