mock-exam-2/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    tier: frontend
  name: my-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: frontend
  strategy: {}
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
