mock-exam-2/webapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    tier: frontend
  name: front-end-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30083
  selector:
    tier: frontend
  type: NodePort
